# rs-retroboard-chess

./: .gitignore  CHANGELOD.md  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yaml
.github/workflows/: check.yml  coverage.yml  test.yaml
benches/: bench.rs
ffi/: Cargo.toml
ffi/src/: main.rs
lib/benches/: bench.rs
lib/src/: lib.rs  main.rs  retroboard.rs  retropocket.rs
src/: lib.rs  main.rs  retroboard.rs  retropocket.rs  unmove.rs
workflow/: hooks.sh  pre-commit  prepare-commit-msg
