[package]
name = "retroboard"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shakmaty = "0.20.2"
regex = "1.5"
lazy_static = "1.4"
arrayvec = "0.7"

[dev-dependencies]
indoc = "1.0.2"
# pretty_assertions